Update publishing tooling and docs